fix horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -538,7 +538,7 @@ h2 {
 }
 
 .input-style {
-  width: 80%;
+  width: 82%;
   height: 48px;
   border-radius: 4px;
   background: rgb(255 255 255 / 100%);
